--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -7,37 +7,32 @@
     
     {% load staticfiles %}
     {% load i18n %}
+
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "css/custom.css" %}">
     <link rel="stylesheet" href="{% static "css/animate.css" %}">
     <link rel="stylesheet" href="{% static "css/sweet-alert.css" %}">
     <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
-    <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
     <link rel="stylesheet" href="{% static "css/timeline.css" %}">
     <link rel="stylesheet" href="{% static "css/sign-in.css" %}">
     <link rel="stylesheet" href="{% static "css/pricing-table.css" %}">
     <link rel="stylesheet" href="{% static "css/profile.css" %}">
-
     <link rel="stylesheet" href="{% static "css/bootstrap-datepicker3.min.css" %}">
     <link rel="stylesheet" href="{% static "css/bootstrap-datepicker.min.css" %}">
     <link rel="stylesheet" href="{% static "css/summernote.css" %}">
     <link rel="stylesheet" href="{% static "css/summernote-bs3.css" %}">
-    <!-- Jquery -->
+    <link rel="stylesheet" href="{% static "css/navbar.css" %}">
+
     <script type="text/javascript" src="{% static "js/jquery-1.11.0.min.js" %}"></script>
-    <!-- Boostrap -->
     <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/summernote.js" %}"></script>
     <script type="text/javascript" src="{% static "js/summernote-es-ES.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap-datepicker.min.js" %}"></script>
-    <!-- Dependencies JS -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB2Ejc7OmM9YxiWGvUqBrx3sKPKedF-IA8&sensor=false"></script>
     <script type="text/javascript" src="{% static "js/sweet-alert.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/countUp.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/main.js" %}"></script>
     <script type="text/javascript" src="{% static "js/validator.js" %}"></script>
-    <!-- Custom Javascript -->
-    <script type="text/javascript" src="{% static "js/home/morphext.min.js" %}"></script>
 
     {% block extrahead %} {% endblock %}
 </head>
