--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -97,7 +97,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label><input type="checkbox" name="terms" required> I agree with the <a href="#">Terms and Conditions</a>.</label>
+                                <label><input type="checkbox" name="terms" required> I agree with the <a href="/privacy_terms">Terms and Conditions</a>.</label>
                                 <span class="help-block with-errors"></span>
                             </div>
 
