--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -42,13 +42,13 @@
         <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <span class="step-links">
                 {% if trips.has_previous %}
-                    <a href="?page={{ trips.previous_page_number }}">previous</a>
+                    <a href="{{ url }}?page={{ trips.previous_page_number }}">previous</a>
                 {% endif %}
                 <span class="current">
                     Page {{ trips.number }} of {{ trips.paginator.num_pages }}.
                 </span>
                 {% if trips.has_next %}
-                    <a href="?page={{ trips.next_page_number }}">next</a>
+                    <a href="{{ url }}?page={{ trips.next_page_number }}">next</a>
                 {% endif %}
             </span>
         </div>
