--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -2,56 +2,60 @@
 {% block title %} Search {% endblock %}
 {% block content %}
 <div class="container">
-{#    <div class="row">#}
-{#        <div class="col-lg-12">#}
-{#            <form action="/search_trip/" method="get">#}
-{#                {% csrf_token %}#}
-{#              <input id="input-search" type="text" name="title" placeholder="Type to search" autofocus>#}
-{#            </form>#}
-{#        </div>#}
-{#    </div>#}
-{#    <br/>#}
-{#    <hr/>#}
     <h1>Search results for "{{ title_search }}"</h1>
     {% if not trip_result %}
         <p>Oops! BrainTravel could not find anything...</p>
-    {% endif %}
-    {% for trip in trip_result %}
-        <div class="well animated fadeInUp col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="media">
-                <div class="row">
-                    <div class="col-xs-offset-4 col-xs-4 col-sm-offset-0 col-sm-2 col-md-offset-0 col-md-2 col-lg-offset-0 col-lg-2">
-                        <a href="/profile/{{ trip.traveller.id }}">
-                            <img class="img-rounded img-responsive img-circle" src="/{{trip.traveller.photo}}" title="{{ trip.traveller.first_name }}">
-                        </a>
-                    </div>
-                    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-                        <div class="text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h2>{{trip.name}}</h2>
+    {% else %}
+        {% for trip in trip_result %}
+            <div class="well col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="media">
+                    <div class="row">
+                        <div class="col-xs-offset-4 col-xs-4 col-sm-offset-0 col-sm-2 col-md-offset-0 col-md-2 col-lg-offset-0 col-lg-2">
+                            <a href="/profile/{{ trip.traveller.id }}">
+                                <img class="img-rounded img-responsive img-circle" src="/{{trip.traveller.photo}}" title="{{ trip.traveller.first_name }}">
+                            </a>
                         </div>
-                        <div class="text-right-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <p><i class="fa fa-globe fa-1x"></i> {{trip.city|safe}} ({{trip.country|safe}})</p>
-                        </div>
-                        <div class="text-justify col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <p>{{trip.publishedDescription|safe}}</p>
-                        </div>
-                        <div class="text-left-center col-xs-12 col-sm-12 col-md-7 col-lg-6">
-                            <p><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</p>
-                        </div>
-                        <div class="text-right-center col-xs-12 col-sm-12 col-md-5 col-lg-offset-1 col-lg-5">
-                            <ul class="list-inline list-unstyled">
-                                <li> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></li>
-                                <li>|</li>
-                                <li><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</li>
-                                <li>|</li>
-                                <li><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</li>
-                                <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> View more</a></li>
-                            </ul>
+                        <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+                            <div class="text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <h2>{{trip.name}}</h2>
+                            </div>
+                            <div class="text-right-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <p><i class="fa fa-globe fa-1x"></i> {{trip.city|safe}} ({{trip.country|safe}})</p>
+                            </div>
+                            <div class="text-justify col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <p>{{trip.publishedDescription|safe}}</p>
+                            </div>
+                            <div class="text-left-center col-xs-12 col-sm-12 col-md-7 col-lg-6">
+                                <p><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</p>
+                            </div>
+                            <div class="text-right-center col-xs-12 col-sm-12 col-md-5 col-lg-offset-1 col-lg-5">
+                                <ul class="list-inline list-unstyled">
+                                    <li> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></li>
+                                    <li>|</li>
+                                    <li><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</li>
+                                    <li>|</li>
+                                    <li><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</li>
+                                    <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> View more</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        {% endfor %}
+        <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <span class="step-links">
+                {% if trip_result.has_previous %}
+                    <a href="/search_trip/?title={{ title_search }}&page={{ trip_result.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="current">
+                    Page {{ trip_result.number }} of {{ trip_result.paginator.num_pages }}.
+                </span>
+                {% if trip_result.has_next %}
+                    <a href="/search_trip/?title={{ title_search }}&page={{ trip_result.next_page_number }}">next</a>
+                {% endif %}
+            </span>
         </div>
-    {% endfor %}
+    {% endif %}
 </div>
 {%endblock%}
