Controlado la longitud maxima del nombre del viaje en servidor. Añadido los JS y Css necesarios para los select bonitos

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{% static "css/summernote.css" %}">
     <link rel="stylesheet" href="{% static "css/summernote-bs3.css" %}">
     <link rel="stylesheet" href="{% static "css/navbar.css" %}">
+    <link rel="stylesheet" href="{% static "css/chosen.bootstrap.min.css" %}">
 
     <script type="text/javascript" src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
@@ -33,6 +34,7 @@
     <script type="text/javascript" src="{% static "js/countUp.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/main.js" %}"></script>
     <script type="text/javascript" src="{% static "js/validator.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/chosen.jquery.js" %}"></script>
 
     {% block extrahead %} {% endblock %}
 </head>
