--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -10,10 +10,13 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
             <form class="form-horizontal" role="form" action="{% if create %}/trip/create/{% else %}/trip/edit/{{ trip.id }}{% endif %}" method="post" data-toggle="validator">
                 {% csrf_token %}
-                <div class="form-group">
+
+                <div class="form-group {% if form.visible_fields.5.errors %} has-error {% endif %}">
                     <label for="id_name" class="control-label"> {% trans "Name" %}</label>
-                    <input class="form-control" id="id_name" name="name" type="text" maxlength="150" value="{{ trip.name }}" required/>
-                    <span class="help-block with-errors">Up to 150 letters, numbers and underscores</span>
+                    <input class="form-control" id="id_name" name="name" placeholder="{%  trans "Up to 150 letters, numbers and underscores"%}" type="text" maxlength="150" value="{{ trip.name }}" required/>
+                    <div class="help-block with-errors">
+                        {{ form.visible_fields.5.errors }}
+                    </div>
                 </div>
 
                 <div class="form-group">
