--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -93,15 +93,15 @@
                                 <i class="entypo-flight" style="text-decoration: None"></i> +
                             </div>
                             <div class="timeline-label">
-                                <form class="form" method="post" action="comment/" id="form-comment-id">
+                                <form class="form" role="form" method="post" action="comment/" id="form-comment-id" data-toggle="validator">
                                     {% csrf_token %}
                                     <div class="form-group">
-                                        <textarea id="text-comment" class="form-control input-block-level" name="text-comment" rows="3" style="resize: none;"></textarea>
+                                        {{ comment_form.visible_fields.0 }}
+                                        <div class="help-block with-errors"></div>
                                     </div>
+                                    {% for hidden in comment_form.hidden_fields %}{{ hidden }}{% endfor %}
                                     <div class="form-group text-right">
-                                        <button id="submit-comment" type="submit" class="btn btn-success">Send</button>
-                                        <input type="hidden" name="trip-id" value="{{trip.id}}"/>
-                                        <input type="hidden" name="last-path" value="{{ request.path }}"/>
+                                        <input class="btn btn-success" value="Send" type="submit">
                                     </div>
                                 </form>
                             </div>
@@ -151,13 +151,13 @@
                     <h4 class="modal-title" id="myModalLabel">Rate this trip</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form" method="post" action="rate/" id="form-rate-id">
+                    <form class="form" method="post" action="rate/" id="form-rate-id" data-toggle="validator">
                         {% csrf_token %}
                         <div class="form-group">
                             <p>Please choose a number between 0 and 10:</p>
                             <input type="number" name="rate-value" min="0" max="10" required/>
                             <p>Please, write a fancy description:</p>
-                            <textarea id="text-comment" class="form-control input-block-level" name="text-rate-description" rows="3" required maxlength="255" style="resize: none;"></textarea>
+                            <textarea id="text-comment" class="form-control input-block-level" name="text-rate-description" rows="3" required="required" maxlength="255" style="resize: none;"></textarea>
                         </div>
                         <div class="modal-footer">
                             <div class="form-group">
