--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -25,19 +25,7 @@
 <body>
 	<!-- Navigation -->
 	{% include "miscellaneous/menu.html" %}
-	<div class="collapse" id="collapseExample">
-        <div class="well">
-            <form action="/search_trip/" method="get" role="search">
-                {% csrf_token %}
-                <div class="input-group">
-                    <input type="text" id="input-search" class="form-control" name="title" placeholder="Type to search">
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="reset" data-toggle="collapse" href="#collapseExample"><span class="glyphicon glyphicon-remove"></span></button>
-                    </span>
-                </div>
-            </form>
-        </div>
-    </div>
+
 	<!-- Header -->
 	<header id="top" class="header">
 		<div class="text-vertical-center">
@@ -178,6 +166,10 @@
 			$("#sidebar-wrapper").toggleClass("active");
 		});
 
+		$('#searchCollapse').on(){
+			
+		}
+		
 		// Scrolls to the selected menu item on the page
 		$(function() {
 			$('a[href*=#]:not([href=#])')
