Resiseño para que se vea bien la paginación de los comentarios

--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -1,6 +1,6 @@
 .timeline-centered {
     position: relative;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px;*/
 }
 
 .timeline-centered:before, .timeline-centered:after {
